--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,19 @@
 .main {
   min-height: calc(100vh - 50px);
 }
+
+.table,
+tr,
+td,
+th {
+  background: transparent !important;
+  color: white !important;
+}
+
+.in {
+  color: greenyellow !important;
+}
+
+.out {
+  color: rgb(250, 115, 115) !important;
+}
